# wove-play

./: .gitignore  CHANGELOG.md  README.md  index.html  latest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
crates/wavr-audio/: Cargo.toml
crates/wavr-audio/src/: decode.rs  dsp.rs  lib.rs
crates/wavr-cast/: Cargo.toml
crates/wavr-cast/src/: cast_v2.rs  lib.rs
crates/wavr-stream/: Cargo.toml
crates/wavr-stream/src/: lib.rs
icon-src/: icon-manifest.json
scripts/: release.sh
src/: App.tsx  app.scss  index.scss  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  wove.desktop
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: analysis.rs  cast.rs  commands.rs  folder.rs  lib.rs  libdb.rs  main.rs  media.rs  mpris.rs  native_audio.rs  native_audio.rs.tmp.11506.5387469afa54  stream.rs  taste.rs
src/audio/: crossfade.test.ts  crossfade.ts  engine.ts  glRender.ts  recorder.ts  sceneRenderer.ts  scratch.ts  vizRender.ts
src/components/: AppBackground.tsx  AppIconMark.tsx  ArtistLinks.tsx  AudioInfo.tsx  BtDevicesEditor.tsx  CastSheet.tsx  ConfirmDialog.tsx  Cover.tsx  CoverPicker.tsx  CrossArt.tsx  DawLink.tsx  DjSetSheet.tsx  EdgeBack.tsx  EqCurve.tsx  EqThumb.tsx  Equalizer.tsx  ErrorBoundary.tsx  ExploreMap.tsx  ExtensionsManager.tsx  FolderBrowser.tsx  FolderTree.tsx  Home.tsx  Icons.tsx  InfoTip.tsx  Intro.tsx  JamendoBrowser.tsx  Knob.tsx  LagHud.tsx  Library.tsx  LyricsView.tsx  MaterialShape.tsx  MiniPlayer.tsx  NavBar.tsx  NavBloom.tsx  NowPlaying.tsx  NpCustomize.tsx  Onboarding.tsx  OutputSettings.tsx  PathCrumbs.tsx  PlaylistPlaySheet.tsx  (+34 more)
src/components/viz/: ContextMenu.tsx  ExportPanel.tsx  FloatingPanel.tsx  LayerList.tsx  LayerProps.tsx  PresetBar.tsx  RendererControls.tsx  controls.tsx
src/gl/: glcore.ts
src/lib/: appIcons.ts  artistInfo.ts  autoBrowse.ts  autoEqTrack.ts  autoEqWorker.ts  autoeq.ts  backStack.ts  backend.ts  backup.ts  bluetoothEq.ts  changelog.ts  desktopMedia.ts  endlessFeed.ts  extensions.ts  features.ts  forYouLanes.ts  format.ts  i18n.ts  jamendo.ts  keyboard.ts  lagMonitor.ts  lagWorker.ts  liveSections.ts  lrc.ts  lyricsProviders.ts  m3u.ts  mediaSession.ts  mixMatch.ts  nativeMedia.ts  outputConfig.ts  perfModes.ts  perfRuntime.ts  podcasts.ts  radio.ts  recommend.test.ts  recommend.ts  scrollKey.ts  soundDna.ts  streams.ts  subsonic.ts  (+11 more)
src/locales/: de.ts  en.ts  es.ts  fr.ts
src/store/: analysisPause.ts  dawLink.ts  dsp.ts  eqAssign.ts  eqPresets.ts  lyrics.ts  mixId.ts  npLayout.ts  outputs.ts  playLog.ts  player.ts  playlists.ts  ratings.ts  sectionEdits.ts  settings.ts  sleep.ts  theme.ts  toasts.ts  ui.ts  viz.ts
src/styles/: _mixins.scss
src/theme/: color.ts  dynamicColor.ts  m3.scss
taste/: Cargo.toml
taste/examples/: bpm_probe.rs
taste/src/: analysis.rs  beatgrid.rs  cluster.rs  dj.rs  endless.rs  events.rs  fingerprint.rs  full.rs  genre.rs  key.rs  lib.rs  mixes.rs  model.rs  normalize.rs  sections.rs
