[package]
name = "wavr-play"
version = "0.1.0"
description = "WAVR Play — Material 3 music player + visualizer with a live link to the WAVR DAW"
authors = ["WAVR"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "wavr_play_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
lofty = "0.21"
ureq = "2"  # tiny blocking HTTP client — proxy fetch (covers/metadata) without the WebView's CORS limits
md5 = "0.7" # Subsonic token auth = md5(password + salt)
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"
tiny_http = "0.12"
wavr-stream = { path = "../crates/wavr-stream" }
wavr-cast = { path = "../crates/wavr-cast" }
taste = { path = "../taste" }
rayon = "1"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "isomp4", "aac", "alac", "flac", "ogg", "vorbis", "wav", "pcm", "adpcm"] }
# SQLite-backed library index (PERF_PLAN P2.9): paged/sorted/filtered browsing of huge libraries
# without holding the whole array in the WebView heap. `bundled` compiles SQLite (incl. FTS) inline so
# there's no system-libsqlite dependency on desktop or Android.
rusqlite = { version = "0.31", features = ["bundled"] }

# Native audio engine (NATIVE_ENGINE_PLAN.md). Builds on ALL platforms: cpal's
# DESKTOP-ONLY (S4 parked): on Android the engine is cpal→Oboe (C++) and needs libc++_shared.so
# bundled or the lib fails to dlopen ("__cxa_pure_virtual") → crash. The Gradle bundling isn't
# working yet, so we keep oboe OUT of the Android build (native_audio.rs uses a no-op stub there).
[target.'cfg(not(target_os = "android"))'.dependencies]
wavr-audio = { path = "../crates/wavr-audio" }

# Desktop OS media controls (MPRIS on Linux): cover/title/artist/album in the system media notification +
# lock screen, with play/pause/next/prev/seek. zbus backend = pure Rust, no libdbus C dependency.
[target.'cfg(target_os = "linux")'.dependencies]
souvlaki = { version = "0.7", default-features = false, features = ["use_zbus"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
