[package]
name = "taste"
version = "0.1.0"
edition = "2021"
description = "Local, content-based music taste-learning + recommendation engine (no UI deps, CPU-only)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-big-array = "0.5"

# Dev-only: the shipped crate stays decoder-free (the host decodes). symphonia is
# pulled in ONLY for the `bpm_probe` example so we can validate the analysis on
# real files from disk.
[dev-dependencies]
symphonia = { version = "0.5", features = ["mp3", "isomp4", "aac", "flac", "wav", "vorbis", "ogg", "pcm"] }

[lib]
path = "src/lib.rs"
